nova secao criada

--- a/style.scss
+++ b/style.scss
@@ -7,7 +7,7 @@
 
 header {
     background-color: #66BB6A;
-    height: 20vh;
+    height: 15vh;
     color: #ffffff;
     //padding-left: 50px; Padding move internamente, movendo da esquerda para a direita
     //padding-top: 25px; movendo internamente de cima para baixo
@@ -49,24 +49,193 @@ h2 {
 
 .background{
   background-image: url("./assets/banner.png");
-  height: 80vh;
+  height: 50vh;
   background-repeat: no-repeat;
   color: #ffffff;
   text-align: center;
   background-position: center;
   background-size: cover;
-  padding-top: 200px;
+  padding-top: 130px;
   h1{
     font-family: "Sansita Swashed", system-ui;
+    font-size: 3rem;
+    margin-bottom: 20px;
     
   }
 
   p{
+    font-size: 1rem;
     margin-top: 20px;
     margin-bottom: 20px;
-    margin-left: 300px;
-    width: 50%;
-   
-
+    margin-left: 500px;
+    width: 34%;
   }
+
+  button{
+    background-color: #66BB6A;
+    color:#ffffff;
+    padding: 10px 30px;
+    border: none;
+    border-radius: 15px 15px 15px 15px;
+    box-shadow:0 2px 6px rgba(0, 0, 0, 0.1);
+
+    }
+}
+.cards{
+  background-color: #F1F8E9;
+  height: 70vh;
+  width: 100%;
+  text-align: center;
+  display:inline-block;
+  border: solid red;
+  padding-top: 50px;
+  
+
+.card1{
+  background-color: #FFFFFF;
+  width: 20.1vw;
+  height: 50vh;
+  text-align: center;
+  border-radius: 15px 15px 15px 15px;
+  display:inline-block;
+  
+
+  img{
+    width: 100%;
+    border-radius:15px 15px 0 0;
+  
+  }
+h3{
+  margin-top: 20px;
+  font-size: 1.50rem;
+  
+}
+p{
+  margin-bottom: 20px;
+  font-size: 1rem;
+  text-align: center;
+  width: 15vw;
+  //background-color: #66BB6A;
+  margin-left: 35px;
+
+}
+button{
+  background-color: #66BB6A;
+  color:#FFFFFF;
+  padding: 10px 30px;
+  border: none;
+  border-radius: 29px; 
+  // para arredondar o botão
+  box-shadow:0 2px 6px rgba(0, 0, 0, 0.1);
+}
+}
+.card2{
+  background-color: #FFFFFF;
+  width: 20.1vw;
+  height: 50vh;
+  text-align: center;
+  border-radius: 15px 15px 15px 15px;
+  display: inline-block;
+
+  img{
+    width: 100%;
+    border-radius:15px 15px 0 0;
+  
+  }
+h3{
+  margin-top: 20px;
+  font-size: 1.50rem;
+  
+}
+p{
+  margin-bottom: 20px;
+  font-size: 1rem;
+  text-align: center;
+  width: 15vw;
+  margin-left: 35px;
+  //background-color: #66BB6A;
+
+}
+button{
+  background-color: #66BB6A;
+  color:#FFFFFF;
+  padding: 10px 30px;
+  border: none;
+  border-radius: 29px; 
+  box-shadow:0 2px 6px rgba(0, 0, 0, 0.1);
+}
+}
+.card3{
+  background-color: #FFFFFF;
+  width: 20.1vw;
+  height: 50vh;
+  text-align: center;
+  border-radius: 15px 15px 15px 15px;
+  display: inline-block;
+
+  img{
+    width: 100%;
+    border-radius:15px 15px 0 0;
+  
+  }
+h3{
+  margin-top: 20px;
+  font-size: 1.50rem;
+  
+}
+p{
+  margin-bottom: 20px;
+  font-size: 1rem;
+  text-align: center;
+  width: 10vw;
+  margin-left: 73px;
+  //background-color: #66BB6A;
+
+}
+button{
+  background-color: #66BB6A;
+  color:#FFFFFF;
+  padding: 10px 30px;
+  border: none;
+  border-radius: 29px; 
+  box-shadow:0 2px 6px rgba(0, 0, 0, 0.1);
+}
+}
+
+.card4{
+  background-color: #FFFFFF;
+  width: 20.1vw;
+  height: 50vh;
+  text-align: center;
+  border-radius: 15px 15px 15px 15px;
+  display: inline-block;
+
+  img{
+    width: 100%;
+    border-radius:15px 15px 0 0;
+  
+  }
+h3{
+  margin-top: 20px;
+  font-size: 1.50rem;
+  
+}
+p{
+  margin-bottom: 20px;
+  font-size: 1rem;
+  text-align: center;
+  width: 14vw;
+  margin-left: 45px;
+ //background-color: #66BB6A;
+}
+button{
+  background-color: #66BB6A;
+  color:#FFFFFF;
+  padding: 10px 30px;
+  border: none;
+  border-radius: 29px; 
+  box-shadow:0 2px 6px rgba(0, 0, 0, 0.1);
+}
+}
+
 }
