--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 header {
   background-color: #66BB6A;
-  height: 20vh;
+  height: 15vh;
   color: #ffffff;
   /* O nav também é block por padrão, então muda o comportamento */
 }
@@ -36,20 +36,165 @@ header nav a {
 
 .background {
   background-image: url("./assets/banner.png");
-  height: 80vh;
+  height: 50vh;
   background-repeat: no-repeat;
   color: #ffffff;
   text-align: center;
   background-position: center;
   background-size: cover;
-  padding-top: 200px;
+  padding-top: 130px;
 }
 .background h1 {
   font-family: "Sansita Swashed", system-ui;
+  font-size: 3rem;
+  margin-bottom: 20px;
 }
 .background p {
+  font-size: 1rem;
   margin-top: 20px;
   margin-bottom: 20px;
-  margin-left: 300px;
-  width: 50%;
+  margin-left: 500px;
+  width: 34%;
+}
+.background button {
+  background-color: #66BB6A;
+  color: #ffffff;
+  padding: 10px 30px;
+  border: none;
+  border-radius: 15px 15px 15px 15px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+.cards {
+  background-color: #F1F8E9;
+  height: 70vh;
+  width: 100%;
+  text-align: center;
+  display: inline-block;
+  border: solid red;
+  padding-top: 50px;
+}
+.cards .card1 {
+  background-color: #FFFFFF;
+  width: 20.1vw;
+  height: 50vh;
+  text-align: center;
+  border-radius: 15px 15px 15px 15px;
+  display: inline-block;
+}
+.cards .card1 img {
+  width: 100%;
+  border-radius: 15px 15px 0 0;
+}
+.cards .card1 h3 {
+  margin-top: 20px;
+  font-size: 1.5rem;
+}
+.cards .card1 p {
+  margin-bottom: 20px;
+  font-size: 1rem;
+  text-align: center;
+  width: 15vw;
+  margin-left: 35px;
+}
+.cards .card1 button {
+  background-color: #66BB6A;
+  color: #FFFFFF;
+  padding: 10px 30px;
+  border: none;
+  border-radius: 29px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+.cards .card2 {
+  background-color: #FFFFFF;
+  width: 20.1vw;
+  height: 50vh;
+  text-align: center;
+  border-radius: 15px 15px 15px 15px;
+  display: inline-block;
+}
+.cards .card2 img {
+  width: 100%;
+  border-radius: 15px 15px 0 0;
+}
+.cards .card2 h3 {
+  margin-top: 20px;
+  font-size: 1.5rem;
+}
+.cards .card2 p {
+  margin-bottom: 20px;
+  font-size: 1rem;
+  text-align: center;
+  width: 15vw;
+  margin-left: 35px;
+}
+.cards .card2 button {
+  background-color: #66BB6A;
+  color: #FFFFFF;
+  padding: 10px 30px;
+  border: none;
+  border-radius: 29px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+.cards .card3 {
+  background-color: #FFFFFF;
+  width: 20.1vw;
+  height: 50vh;
+  text-align: center;
+  border-radius: 15px 15px 15px 15px;
+  display: inline-block;
+}
+.cards .card3 img {
+  width: 100%;
+  border-radius: 15px 15px 0 0;
+}
+.cards .card3 h3 {
+  margin-top: 20px;
+  font-size: 1.5rem;
+}
+.cards .card3 p {
+  margin-bottom: 20px;
+  font-size: 1rem;
+  text-align: center;
+  width: 10vw;
+  margin-left: 73px;
+}
+.cards .card3 button {
+  background-color: #66BB6A;
+  color: #FFFFFF;
+  padding: 10px 30px;
+  border: none;
+  border-radius: 29px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+.cards .card4 {
+  background-color: #FFFFFF;
+  width: 20.1vw;
+  height: 50vh;
+  text-align: center;
+  border-radius: 15px 15px 15px 15px;
+  display: inline-block;
+}
+.cards .card4 img {
+  width: 100%;
+  border-radius: 15px 15px 0 0;
+}
+.cards .card4 h3 {
+  margin-top: 20px;
+  font-size: 1.5rem;
+}
+.cards .card4 p {
+  margin-bottom: 20px;
+  font-size: 1rem;
+  text-align: center;
+  width: 14vw;
+  margin-left: 45px;
+}
+.cards .card4 button {
+  background-color: #66BB6A;
+  color: #FFFFFF;
+  padding: 10px 30px;
+  border: none;
+  border-radius: 29px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }/*# sourceMappingURL=style.css.map */
