--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@300..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -197,4 +198,80 @@ header nav a {
   border: none;
   border-radius: 29px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+.forms {
+  background-color: #E8F5E9;
+  height: 120vh;
+  padding-top: 10vh;
+  width: 100%;
+}
+.forms h2 {
+  font-size: 3rem;
+  font-family: "Roboto", sans-serif;
+  text-align: center;
+}
+.forms p {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 1.4rem;
+  color: #767676;
+  text-align: center;
+  width: 55%;
+  margin-left: 315px;
+  margin-top: 2vh;
+}
+.forms form {
+  border: solid red;
+  width: 50%;
+  height: 90vh;
+  margin-left: 345px;
+  margin-top: 2vh;
+}
+.forms form div {
+  font-size: 1.2rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  width: 40%;
+  height: 90vh;
+  text-align: center;
+  display: inline;
+}
+.forms form div fieldset {
+  border-radius: 29px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  border: solid green;
+  width: 100%;
+  height: 10vh;
+  text-align: center;
+  margin-bottom: 30px;
+}
+.forms form div fieldset label {
+  border-radius: 29px;
+  display: block;
+  text-align: left;
+  padding-left: 20%;
+}
+.forms form button {
+  border-radius: 29px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  background-color: #66BB6A;
+  color: #FFFFFF;
+  padding: 20px 40px;
+  border: none;
+  width: 100%;
+  font-size: 1.2rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+}
+
+footer {
+  background-color: #66BB6A;
+  font-family: "Roboto", sans-serif;
+  color: #FFFFFF;
+  text-align: center;
+  height: 15vh;
+  padding: 10vh;
+  font-weight: 400;
+  font-size: 1rem;
 }/*# sourceMappingURL=style.css.map */
